Fixed Table Overflow

--- a/client/styles.css
+++ b/client/styles.css
@@ -74,20 +74,24 @@ body {
 
 .table-wrapper{
     text-align: center;
+    width: 100%;
 }
 
 .hscroll {
     background-color: lightblue;
     border: 1px solid black;
-    height: 800px;
-    width: 1800px;
+    height: 700px;
+    width: 100%;
     overflow-x: scroll;
     margin-top: 35px;
+    margin-bottom: 35px;
 }
 
 .tablemargins{
-    /*margin-left: 20px; */
+    margin-right: 50px;
     align-self: center;
+    max-width: 90%;
+    max-height: 90%;
 }
 
 h1 {
